Fix units list z-index.

--- a/client/app/reporting/reporting-unit/reporting-unit.scss
+++ b/client/app/reporting/reporting-unit/reporting-unit.scss
@@ -4,6 +4,7 @@
   reporting-unit-list {
     .br-mailbox-list {
       left: auto;
+      z-index: auto;
     }
 
     @include media-breakpoint-down(md) {
